--- a/Lab2/Lab2_proj/ClientPart/mainwindow.ui
+++ b/Lab2/Lab2_proj/ClientPart/mainwindow.ui
@@ -57,7 +57,7 @@
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="styleSheet">
-       <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(23, 30, 34, 255), stop:0.5 rgba(30, 40, 45, 255), stop:1 rgba(23, 30, 34, 255));</string>
+       <string notr="true">background-color:#1e282d;</string>
       </property>
       <property name="currentIndex">
        <number>0</number>
@@ -186,8 +186,8 @@ QCheckBox{
         </property>
         <property name="geometry">
          <rect>
-          <x>410</x>
-          <y>340</y>
+          <x>440</x>
+          <y>310</y>
           <width>100</width>
           <height>27</height>
          </rect>
@@ -220,8 +220,8 @@ QCheckBox{
        <widget class="QPushButton" name="LogButton">
         <property name="geometry">
          <rect>
-          <x>410</x>
-          <y>270</y>
+          <x>440</x>
+          <y>250</y>
           <width>100</width>
           <height>27</height>
          </rect>
@@ -254,8 +254,8 @@ QCheckBox{
        <widget class="QPushButton" name="RegButton">
         <property name="geometry">
          <rect>
-          <x>410</x>
-          <y>310</y>
+          <x>440</x>
+          <y>280</y>
           <width>100</width>
           <height>27</height>
          </rect>
