--- a/Lab3/Lab3_proj/ServerPart/mainwindow.ui
+++ b/Lab3/Lab3_proj/ServerPart/mainwindow.ui
@@ -17,11 +17,34 @@
    <widget class="QTableView" name="tableView">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>50</y>
+      <x>20</x>
+      <y>10</y>
       <width>256</width>
       <height>192</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>50</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>100</y>
+      <width>80</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
     </property>
    </widget>
   </widget>
