--- a/Lab2/Lab2_proj/ClientPart/recources.qrc
+++ b/Lab2/Lab2_proj/ClientPart/recources.qrc
@@ -10,5 +10,6 @@
         <file>img/TrainIconFocus.png</file>
         <file>img/TrainIconHover.png</file>
         <file>img/Arrow.png</file>
+        <file>img/loadingGif.gif</file>
     </qresource>
 </RCC>
