--- a/Lab2/Lab2_proj/ClientPart/mainwindow.ui
+++ b/Lab2/Lab2_proj/ClientPart/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1040</width>
-    <height>605</height>
+    <height>585</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -66,7 +66,7 @@
        <string notr="true">background-color:#1e282d;</string>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="LoginMenu">
        <property name="sizePolicy">
@@ -118,6 +118,7 @@ QPushButton:hover:pressed{
 	background-color: #37474F;
 color:#DDDDDD;
 }
+
 
 /*--------------------------------Check box--------------------------------*/
 QCheckBox {
@@ -184,6 +185,7 @@ QCheckBox{
 	background-color: none;
 
 }
+
 </string>
        </property>
        <widget class="QPushButton" name="ExitButton">
@@ -345,6 +347,9 @@ QCheckBox{
           <height>16777215</height>
          </size>
         </property>
+        <property name="maxLength">
+         <number>50</number>
+        </property>
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
         </property>
@@ -405,6 +410,9 @@ QCheckBox{
         </property>
         <property name="text">
          <string/>
+        </property>
+        <property name="maxLength">
+         <number>50</number>
         </property>
         <property name="frame">
          <bool>true</bool>
@@ -563,6 +571,9 @@ QLineEdit:focus{
           <height>55</height>
          </size>
         </property>
+        <property name="maxLength">
+         <number>50</number>
+        </property>
         <property name="echoMode">
          <enum>QLineEdit::Normal</enum>
         </property>
@@ -597,6 +608,9 @@ QLineEdit:focus{
           <height>55</height>
          </size>
         </property>
+        <property name="maxLength">
+         <number>50</number>
+        </property>
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
         </property>
@@ -630,6 +644,9 @@ QLineEdit:focus{
           <width>500</width>
           <height>55</height>
          </size>
+        </property>
+        <property name="maxLength">
+         <number>50</number>
         </property>
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
