error displaying redesign, code refactoring

--- a/Lab2/Lab2_proj/ClientPart/recources.qrc
+++ b/Lab2/Lab2_proj/ClientPart/recources.qrc
@@ -12,4 +12,5 @@
         <file>img/Arrow.png</file>
         <file>img/loadingGif.gif</file>
     </qresource>
+    <qresource prefix="/files"/>
 </RCC>
