--- a/Lab2/Lab2_proj/ClientPart/buytickets.ui
+++ b/Lab2/Lab2_proj/ClientPart/buytickets.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>893</width>
-    <height>554</height>
+    <width>1120</width>
+    <height>453</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -134,6 +134,10 @@ border-radius:6px;
 
 #TrainsTable{
 	background-color:#37474F ;
+	alternate-background-color:rgb(46, 59, 66);
+	color:#ECEFF1;
+	font-family: &quot;Calibri&quot;;
+	font-size: 17px;
 }
 
 
@@ -660,6 +664,13 @@ QLabel{
         </widget>
        </item>
        <item row="1" column="0">
+        <layout class="QGridLayout" name="gridLayout_8">
+         <property name="leftMargin">
+          <number>100</number>
+         </property>
+        </layout>
+       </item>
+       <item row="2" column="0">
         <widget class="QTableView" name="TrainsTable">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -679,55 +690,42 @@ QLabel{
            <height>0</height>
           </size>
          </property>
+         <property name="dragEnabled">
+          <bool>false</bool>
+         </property>
+         <property name="alternatingRowColors">
+          <bool>true</bool>
+         </property>
+         <attribute name="verticalHeaderVisible">
+          <bool>false</bool>
+         </attribute>
         </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="seatsMeanu">
-      <layout class="QGridLayout" name="gridLayout_5" rowstretch="0,0,1,0,1,0,0">
+      <layout class="QGridLayout" name="gridLayout_5" rowstretch="0,0,0,0,0,0,0">
        <property name="leftMargin">
-        <number>10</number>
-       </property>
-       <property name="topMargin">
-        <number>10</number>
-       </property>
-       <property name="rightMargin">
-        <number>10</number>
-       </property>
-       <property name="bottomMargin">
-        <number>50</number>
-       </property>
-       <property name="horizontalSpacing">
         <number>0</number>
        </property>
-       <property name="verticalSpacing">
-        <number>10</number>
+       <property name="topMargin">
+        <number>0</number>
        </property>
-       <item row="2" column="0">
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <item row="4" column="0">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
+        <layout class="QGridLayout" name="seatsLayout">
+         <property name="spacing">
+          <number>0</number>
          </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
+        </layout>
        </item>
        <item row="1" column="0">
         <layout class="QGridLayout" name="gridLayout_10">
@@ -738,7 +736,7 @@ QLabel{
           <number>15</number>
          </property>
          <item row="0" column="0">
-          <widget class="QPushButton" name="pushButton">
+          <widget class="QPushButton" name="goToTrainSelect">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -784,30 +782,213 @@ QLabel{
          </property>
         </spacer>
        </item>
-       <item row="5" column="0">
-        <layout class="QGridLayout" name="seatsLayout">
+       <item row="2" column="0">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="3" column="0">
+        <layout class="QGridLayout" name="wagonLayout">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>50</number>
+         </property>
          <property name="spacing">
           <number>0</number>
          </property>
         </layout>
        </item>
-       <item row="3" column="0">
-        <layout class="QGridLayout" name="wagonLayout">
+       <item row="5" column="0">
+        <layout class="QGridLayout" name="purchaseLayout">
          <property name="leftMargin">
-          <number>30</number>
+          <number>0</number>
          </property>
          <property name="topMargin">
-          <number>30</number>
+          <number>35</number>
          </property>
-         <property name="rightMargin">
-          <number>30</number>
+         <property name="horizontalSpacing">
+          <number>10</number>
          </property>
-         <property name="bottomMargin">
-          <number>30</number>
+         <property name="verticalSpacing">
+          <number>0</number>
          </property>
-         <property name="spacing">
-          <number>30</number>
-         </property>
+         <item row="0" column="5">
+          <spacer name="horizontalSpacer_7">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="2">
+          <widget class="QLineEdit" name="ownerFnameLineEdit">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>300</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>300</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="placeholderText">
+            <string>Owner first name</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <spacer name="horizontalSpacer_6">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="4">
+          <layout class="QGridLayout" name="gridLayout_9">
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="horizontalSpacing">
+            <number>0</number>
+           </property>
+           <property name="verticalSpacing">
+            <number>7</number>
+           </property>
+           <item row="0" column="0">
+            <widget class="QPushButton" name="buyTicketButton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>100</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>100</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Buy</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QPushButton" name="reserveTicketButton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>100</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>100</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Reserve</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="0" column="3">
+          <widget class="QLineEdit" name="ownerLnameLineEdit">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>300</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>300</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="placeholderText">
+            <string>Owner last name</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLabel" name="seatNumberLabel">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>170</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Seat number: </string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
       </layout>
@@ -816,6 +997,20 @@ QLabel{
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>DepartureLineEdit</tabstop>
+  <tabstop>DestinationLineEdit</tabstop>
+  <tabstop>DateEdit</tabstop>
+  <tabstop>TimeEdit</tabstop>
+  <tabstop>SearchButton</tabstop>
+  <tabstop>ReverseDepDest</tabstop>
+  <tabstop>goToTrainSelect</tabstop>
+  <tabstop>ownerFnameLineEdit</tabstop>
+  <tabstop>ownerLnameLineEdit</tabstop>
+  <tabstop>buyTicketButton</tabstop>
+  <tabstop>reserveTicketButton</tabstop>
+  <tabstop>TrainsTable</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
