reserved tickets menu WIP

--- a/Lab2/Lab2_proj/ClientPart/buytickets.ui
+++ b/Lab2/Lab2_proj/ClientPart/buytickets.ui
@@ -364,7 +364,7 @@ QLabel{
                  </size>
                 </property>
                 <property name="text">
-                 <string>Serch</string>
+                 <string>Search</string>
                 </property>
                 <property name="checkable">
                  <bool>false</bool>
