--- a/Lab2/Lab2_proj/ClientPart/reserveticketsmenu.ui
+++ b/Lab2/Lab2_proj/ClientPart/reserveticketsmenu.ui
@@ -14,7 +14,18 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">/*--------------------------------Backdround color--------------------------------*/
+   <string notr="true">/*--------------------------------Table view--------------------------------*/
+
+QTableView{
+	background-color:#37474F ;
+	alternate-background-color:rgb(46, 59, 66);
+	color:#ECEFF1;
+	font-family: &quot;Calibri&quot;;
+	font-size: 17px;
+}
+
+
+/*--------------------------------Backdround color--------------------------------*/
 #LoginMenu{
 background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(23, 30, 34, 255), stop:0.5 rgba(30, 40, 45, 255), stop:1 rgba(23, 30, 34, 255));
 }
@@ -123,7 +134,7 @@ QCheckBox{
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <property name="elideMode">
       <enum>Qt::ElideNone</enum>
@@ -139,11 +150,29 @@ QCheckBox{
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
-       <string>Bought tickets</string>
+       <string>Reserved tickets</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_5">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>10</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <item row="0" column="0">
         <layout class="QGridLayout" name="gridLayout">
+         <property name="topMargin">
+          <number>0</number>
+         </property>
          <property name="horizontalSpacing">
           <number>15</number>
          </property>
@@ -151,10 +180,23 @@ QCheckBox{
           <number>0</number>
          </property>
          <item row="0" column="0">
-          <widget class="QTableView" name="boughtTicketsTable"/>
+          <widget class="QTableView" name="reservedTicketsTable">
+           <property name="editTriggers">
+            <set>QAbstractItemView::NoEditTriggers</set>
+           </property>
+           <property name="alternatingRowColors">
+            <bool>true</bool>
+           </property>
+           <property name="sortingEnabled">
+            <bool>true</bool>
+           </property>
+           <attribute name="verticalHeaderVisible">
+            <bool>false</bool>
+           </attribute>
+          </widget>
          </item>
          <item row="1" column="0">
-          <layout class="QGridLayout" name="gridLayout_3">
+          <layout class="QGridLayout" name="buyMenuLayOut">
            <property name="topMargin">
             <number>30</number>
            </property>
@@ -202,6 +244,9 @@ QCheckBox{
            <item row="0" column="3">
             <layout class="QGridLayout" name="gridLayout_4">
              <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="horizontalSpacing">
               <number>0</number>
              </property>
              <property name="verticalSpacing">
@@ -281,21 +326,77 @@ QCheckBox{
      </widget>
      <widget class="QWidget" name="tab_2">
       <attribute name="title">
-       <string>Reserved tickets</string>
+       <string>Bought tickets</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_6">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>10</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <item row="0" column="0">
-        <widget class="QTableView" name="reservedTicketsTable"/>
+        <widget class="QTableView" name="boughtTicketsTable">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+         <property name="alternatingRowColors">
+          <bool>true</bool>
+         </property>
+         <property name="sortingEnabled">
+          <bool>true</bool>
+         </property>
+         <attribute name="verticalHeaderVisible">
+          <bool>false</bool>
+         </attribute>
+        </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tab_3">
       <attribute name="title">
-       <string>Tickets history</string>
+       <string>Unactive tickets</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_7">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>10</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <item row="0" column="0">
-        <widget class="QTableView" name="unActiveTicketsTable"/>
+        <widget class="QTableView" name="unActiveTicketsTable">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+         <property name="alternatingRowColors">
+          <bool>true</bool>
+         </property>
+         <property name="sortingEnabled">
+          <bool>true</bool>
+         </property>
+         <attribute name="verticalHeaderVisible">
+          <bool>false</bool>
+         </attribute>
+        </widget>
        </item>
       </layout>
      </widget>
