--- a/Lab2/Lab2_proj/ClientPart/recources.qrc
+++ b/Lab2/Lab2_proj/ClientPart/recources.qrc
@@ -9,9 +9,14 @@
         <file>img/ExitIconHover.png</file>
         <file>img/TrainIconFocus.png</file>
         <file>img/TrainIconHover.png</file>
-        <file>img/Arrow.png</file>
         <file>img/loadingGif.gif</file>
         <file>img/programicon.png</file>
+        <file>img/downArrow.png</file>
+        <file>img/upArrow.png</file>
+        <file>img/freeSeat.png</file>
+        <file>img/takenSeat.png</file>
+        <file>img/selectedSeat.png</file>
+        <file>img/wagonIcon.png</file>
     </qresource>
     <qresource prefix="/files"/>
 </RCC>
